# docs/openapi_complete.yaml
@@ -687,106 +687,6 @@ paths:
           application/json:
             schema:
               type: object
-  /api/v1/badge-control/assign/tenant:
-    post:
-      summary: AssignToTenant
-      description: badge模块 - AssignToTenant
-      tags:
-      - badge
-      responses:
-        '200':
-          description: 成功
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-  /api/v1/badge-control/assign/employee:
-    post:
-      summary: AssignToEmployee
-      description: badge模块 - AssignToEmployee
-      tags:
-      - badge
-      responses:
-        '200':
-          description: 成功
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-  /api/v1/badge-control/reclaim/employee:
-    post:
-      summary: ReclaimFromEmployee
-      description: badge模块 - ReclaimFromEmployee
-      tags:
-      - badge
-      responses:
-        '200':
-          description: 成功
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-  /api/v1/badge-control/reclaim/tenant:
-    post:
-      summary: ReclaimFromTenant
-      description: badge模块 - ReclaimFromTenant
-      tags:
-      - badge
-      responses:
-        '200':
-          description: 成功
-          content:
-            application/json:
-              schema:
-                type: object
-        '400':
-          $ref: '#/components/responses/BadRequestError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
   /api/v1/badge-control/tickets/submit:
     post:
       summary: SubmitTicket
